@@ -18,26 +18,31 @@ import net.minecraft.client.gui.components.toasts.TutorialToast;
 import net.minecraft.client.gui.screens.inventory.InventoryScreen;
 import net.minecraft.client.player.LocalPlayer;
 import net.minecraft.client.renderer.FogRenderer;
-import net.minecraft.client.resources.language.I18n;
 import net.minecraft.client.resources.sounds.AmbientSoundHandler;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.core.particles.ParticleOptions;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
+import net.minecraft.server.MinecraftServer;
 import net.minecraft.util.Mth;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.effect.MobEffects;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.entity.vehicle.Boat;
 import net.minecraft.world.inventory.Slot;
 import net.minecraft.world.item.BlockItem;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.levelgen.Heightmap;
 import net.minecraft.world.level.material.FogType;
 import net.minecraft.world.phys.BlockHitResult;
 import net.minecraft.world.phys.HitResult;
+import net.minecraft.world.phys.Vec2;
 import net.minecraft.world.phys.shapes.Shapes;
 import net.minecraftforge.client.event.ClientPlayerNetworkEvent;
 import net.minecraftforge.client.event.CustomizeGuiOverlayEvent;
@@ -56,8 +61,10 @@ import net.minecraftforge.eventbus.api.IEventBus;
 import net.minecraftforge.fluids.FluidStack;
 import net.minecraftforge.network.PacketDistributor;
 import net.minecraftforge.registries.ForgeRegistries;
+import net.minecraftforge.server.ServerLifecycleHooks;
 
 import net.dries007.tfc.TerraFirmaCraft;
+import net.dries007.tfc.client.particle.TFCParticles;
 import net.dries007.tfc.client.screen.button.PlayerInventoryTabButton;
 import net.dries007.tfc.common.TFCTags;
 import net.dries007.tfc.common.blockentities.SluiceBlockEntity;
@@ -92,9 +99,9 @@ import net.dries007.tfc.util.Pannable;
 import net.dries007.tfc.util.PhysicalDamageType;
 import net.dries007.tfc.util.Sluiceable;
 import net.dries007.tfc.util.calendar.Calendars;
-import net.dries007.tfc.util.calendar.ICalendar;
 import net.dries007.tfc.util.climate.Climate;
 import net.dries007.tfc.util.tracker.WorldTrackerCapability;
+import net.dries007.tfc.world.ChunkGeneratorExtension;
 import net.dries007.tfc.world.chunkdata.ChunkData;
 
 import static net.minecraft.ChatFormatting.*;
@@ -132,44 +139,52 @@ public class ClientForgeEventHandler
 
     public static void onRenderGameOverlayText(CustomizeGuiOverlayEvent.DebugText event)
     {
-        Minecraft mc = Minecraft.getInstance();
-        List<String> list = event.getRight();
-        if (mc.level != null && mc.options.renderDebug && TFCConfig.CLIENT.enableTFCF3Overlays.get())
+        final Minecraft mc = Minecraft.getInstance();
+        if (mc.level != null && mc.options.renderDebug && TFCConfig.CLIENT.enableDebug.get())
         {
-            //noinspection ConstantConditions
-            BlockPos pos = BlockPos.containing(mc.getCameraEntity().getX(), mc.getCameraEntity().getBoundingBox().minY, mc.getCameraEntity().getZ());
+            final Entity camera = mc.getCameraEntity();
+            assert camera != null;
+            final BlockPos pos = BlockPos.containing(camera.getX(), camera.getBoundingBox().minY, camera.getZ());
             if (mc.level.hasChunk(pos.getX() >> 4, pos.getZ() >> 4))
             {
-                list.add("");
-                list.add(AQUA + TerraFirmaCraft.MOD_NAME);
+                final List<String> tooltip = event.getLeft();
 
-                // Always add calendar info
-                list.add(Component.translatable("tfc.tooltip.calendar_date", Calendars.CLIENT.getCalendarTimeAndDate()).getString());
+                tooltip.add("");
+                tooltip.add(AQUA + TerraFirmaCraft.MOD_NAME);
+                tooltip.add(Component.translatable("tfc.tooltip.calendar_date", Calendars.CLIENT.getCalendarTimeAndDate()).getString());
+                tooltip.add("Avg: %.1f Actual: %.1f Rain: %.1f".formatted(
+                    ClimateRenderCache.INSTANCE.getAverageTemperature(),
+                    ClimateRenderCache.INSTANCE.getTemperature(),
+                    ClimateRenderCache.INSTANCE.getRainfall()
+                ));
+                final Vec2 wind = ClimateRenderCache.INSTANCE.getWind();
+                tooltip.add(Component.translatable("tfc.tooltip.wind_speed",
+                    Mth.floor(320 * wind.length()),
+                    String.format("%.0f", Mth.abs(wind.x * 100)),
+                    Helpers.translateEnum(wind.x > 0 ? Direction.EAST : Direction.WEST),
+                    String.format("%.0f", Mth.abs(wind.y * 100)),
+                    Helpers.translateEnum(wind.y > 0 ? Direction.SOUTH : Direction.NORTH))
+                    .getString());
+                tooltip.add("Tick: %d Calendar: %d Day: %d".formatted(Calendars.CLIENT.getTicks(), Calendars.CLIENT.getCalendarTicks(), camera.level().getDayTime()));
 
-                if (TFCConfig.CLIENT.enableDebug.get())
+                final ChunkData data = ChunkData.get(mc.level, pos);
+                if (data.status() == ChunkData.Status.CLIENT)
                 {
-                    list.add(String.format("[Debug] Ticks = %d, Calendar = %d, Daytime = %d", Calendars.CLIENT.getTicks(), Calendars.CLIENT.getCalendarTicks(), mc.getCameraEntity().level().getDayTime() % ICalendar.TICKS_IN_DAY));
-                }
-
-                // Always add climate data
-                list.add(GRAY + I18n.get("tfc.tooltip.f3_average_temperature", WHITE + String.format("%.1f", ClimateRenderCache.INSTANCE.getAverageTemperature())));
-                list.add(GRAY + I18n.get("tfc.tooltip.f3_temperature", WHITE + String.format("%.1f", ClimateRenderCache.INSTANCE.getTemperature())));
-                list.add(GRAY + I18n.get("tfc.tooltip.f3_rainfall", WHITE + String.format("%.1f", ClimateRenderCache.INSTANCE.getRainfall())));
-
-                ChunkData data = ChunkData.get(mc.level, pos);
-                if (data.getStatus() == ChunkData.Status.CLIENT)
-                {
-                    list.add(GRAY + I18n.get("tfc.tooltip.f3_forest_type") + WHITE + I18n.get(Helpers.getEnumTranslationKey(data.getForestType())));
-                    list.add(GRAY + I18n.get("tfc.tooltip.f3_forest_properties",
-                        WHITE + String.format("%.1f%%", 100 * data.getForestDensity()) + GRAY,
-                        WHITE + String.format("%.1f%%", 100 * data.getForestWeirdness()) + GRAY));
+                    tooltip.add("F: %s Density: %.1f Weird: %.1f".formatted(data.getForestType().getSerializedName(), data.getForestDensity(), data.getForestWeirdness()));
                 }
                 else
                 {
-                    list.add(GRAY + I18n.get("tfc.tooltip.f3_invalid_chunk_data"));
+                    tooltip.add("[Waiting for chunk data]");
                 }
 
-                mc.level.getCapability(WorldTrackerCapability.CAPABILITY).ifPresent(cap -> cap.addDebugTooltip(list));
+                mc.level.getCapability(WorldTrackerCapability.CAPABILITY).ifPresent(cap -> cap.addDebugTooltip(tooltip));
+
+                final MinecraftServer server = ServerLifecycleHooks.getCurrentServer();
+                if (server != null && server.overworld().getChunkSource().getGenerator() instanceof ChunkGeneratorExtension ex)
+                {
+                    final int approxSurfaceY = mc.level.getHeight(Heightmap.Types.MOTION_BLOCKING, pos.getX(), pos.getZ());
+                    ex.chunkDataProvider().generator().displayDebugInfo(tooltip, pos, approxSurfaceY);
+                }
             }
         }
     }
@@ -383,6 +398,45 @@ public class ClientForgeEventHandler
         {
             Calendars.CLIENT.onClientTick();
             ClimateRenderCache.INSTANCE.onClientTick();
+            tickWind();
+        }
+    }
+
+    private static void tickWind()
+    {
+        if (!TFCConfig.CLIENT.enableWindParticles.get())
+            return;
+        final Level level = ClientHelpers.getLevel();
+        final Player player = ClientHelpers.getPlayer();
+        if (player != null && level != null && level.getGameTime() % 2 == 0)
+        {
+            final BlockPos pos = player.blockPosition();
+            final Vec2 wind = ClimateRenderCache.INSTANCE.getWind();
+            final float windStrength = wind.length();
+            int count = 0;
+            if (windStrength > 0.3f)
+            {
+                count = (int) (windStrength * 8);
+            }
+            else if (player.getVehicle() instanceof Boat)
+            {
+                count = 2; // always show if in a boat
+            }
+            if (count == 0)
+                return;
+            final double xBias = wind.x > 0 ? 6 : -6;
+            final double zBias = wind.y > 0 ? 6 : -6;
+            final ParticleOptions particle = ClimateRenderCache.INSTANCE.getTemperature() < 0f && level.getRainLevel(0) > 0 ? TFCParticles.SNOWFLAKE.get() : TFCParticles.WIND.get();
+            for (int i = 0; i < count; i++)
+            {
+                final double x = pos.getX() + Mth.nextDouble(level.random, -12 - xBias, 12 - xBias);
+                final double y = pos.getY() + Mth.nextDouble(level.random, -1, 6);
+                final double z = pos.getZ() + Mth.nextDouble(level.random, -12 - zBias, 12 - zBias);
+                if (level.canSeeSky(BlockPos.containing(x, y, z)))
+                {
+                    level.addParticle(particle, x, y, z, 0D, 0D, 0D);
+                }
+            }
         }
     }
 
